<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentRecord">

    <Button
        android:id="@+id/btnRecord"
        android:layout_width="142dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/happySunny"
        android:text="@string/record_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <Button
        android:id="@+id/btnStopRecording"
        android:layout_width="136dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="232dp"
        android:layout_marginRight="232dp"
        android:background="@color/happySunny"
        android:text="@string/stopRecording_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRecord" />


    <Button
        android:id="@+id/playAudio"
        android:layout_width="157dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/happySunny"
        android:text="@string/playAudio_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRecord"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stopPlaying"
        android:layout_width="184dp"
        android:layout_height="56dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/happySunny"
        android:text="@string/stopAudioPlayback_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnStopRecording"
        app:layout_constraintTop_toBottomOf="@+id/playAudio" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="408dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/recordedFailName_btn"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStopRecording" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="395dp"
        android:layout_height="365dp"
        android:layout_marginTop="51dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

</android.support.constraint.ConstraintLayout>